# config4cpp

./: .gitignore  CMakeLists.txt  README.txt  VERSION.txt
demos/: CMakeLists.txt
demos/encapsulate-lookup-api/: CMakeLists.txt  FooConfiguration.h
demos/extended-schema-validator/: CMakeLists.txt
demos/log-level/: CMakeLists.txt
demos/recipes/: CMakeLists.txt
demos/simple-encapsulation/: CMakeLists.txt
include/config4cpp/: Configuration.h  ConfigurationException.h  ConfigurationExt.h
src/: CMakeLists.txt  Config2Cpp.cpp  Config2Cpp.h  ConfigItem.cpp  ConfigLex.cpp  ConfigLex.h  ConfigParser.cpp  ConfigParser.h  ConfigScope.cpp  ConfigScope.h  ConfigScopeEntry.cpp  Configuration.cpp  ConfigurationImpl.cpp  ConfigurationImpl.h  LexBase.cpp  SchemaType.cpp  SchemaTypeBoolean.cpp  SchemaTypeDummy.h  SchemaTypeDurationMicroseconds.cpp  SchemaTypeDurationMilliseconds.cpp  SchemaTypeDurationSeconds.cpp  SchemaTypeEnum.cpp  SchemaTypeFloat.cpp  SchemaTypeFloatWithUnits.cpp  SchemaTypeInt.cpp  SchemaTypeIntWithUnits.cpp  SchemaTypeList.cpp  SchemaTypeMemorySizeBytes.cpp  SchemaTypeMemorySizeKB.cpp  SchemaTypeMemorySizeMB.cpp  SchemaTypeScope.cpp  SchemaTypeString.cpp  SchemaTypeTable.cpp  SchemaTypeTuple.cpp  SchemaTypeTypedef.cpp  SchemaTypeUnitsWithFloat.cpp  SchemaTypeUnitsWithInt.cpp  StringVector.cpp  UidIdentifierProcessor.cpp
tests/: CMakeLists.txt
tests/schema-types/: CMakeLists.txt
